--- a/home.html
+++ b/home.html
@@ -46,7 +46,7 @@
         .hero {
             text-align: center;
             padding: 100px 20px;
-            background: url('hero-bg.jpg') no-repeat center center/cover;
+            background: url('none.png') no-repeat center center/cover;
             color: white;
         }
 
@@ -68,6 +68,7 @@
             border: none;
             border-radius: 5px;
             cursor: pointer;
+            text-decoration: none;
         }
 
         .hero .cta-button:hover {
@@ -129,6 +130,7 @@
             border: none;
             border-radius: 5px;
             cursor: pointer;
+            text-decoration: none;
         }
 
         .cta .cta-button:hover {
@@ -152,16 +154,21 @@
     <header>
         <div class="logo">Movie Location Explorer</div>
         <nav class="nav-links">
-            <a href="#">Home</a>
-            <a href="#">Features</a>
-            <a href="#">About</a>
-            <a href="#">Contact</a>
+            <a href="home.html">Home</a>
+            <a href="nearme.html">Near me</a>
+            <a href="friends.html">Friends</a>
+            <a href="profile.html">Profile</a>
         </nav>
     </header>
     <section class="hero">
+        <br>
         <h1>Discover Movie Filming Locations</h1>
         <p>Explore the real-life locations of your favorite movies and plan your next adventure.</p>
-        <button class="cta-button">Get Started</button>
+        <a href="profile.html" class="cta-button">Get Started</a>
+        <br>
+        <br>
+        <br>
+        <br>
     </section>
     <section class="features">
         <div class="feature">
@@ -184,7 +191,7 @@
     <section class="cta">
         <h2>Join Movie Location Explorer Today</h2>
         <p>Start your journey to explore and share the best movie filming locations around the world.</p>
-        <button class="cta-button">Sign Up Now</button>
+        <a href="profile.html" class="cta-button">Sign Up Now</a>
     </section>
     <footer>
         <p>&copy; 2024 Movie Location Explorer. All rights reserved.</p>
