--- a/nearme.html
+++ b/nearme.html
@@ -212,10 +212,11 @@
     <footer>
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Friends</a></li>
-                <li><a href="#">VisitList</a></li>
-                <li><a href="#">Profile</a></li>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="friends.html">Friends</a></li>
+                <li><a href="index.html">My stuff</a></li>
+                <li><a href="profile.html">Profile</a></li>
+                <li><a href="nearme.html">Near me</a></li>
             </ul>
         </nav>
     </footer>
