--- a/friends.html
+++ b/friends.html
@@ -27,7 +27,7 @@
                         <td>1</td>
                         <td>
                             <div class="friend-info">
-                                <img src="profile1.png" alt="John Doe" class="profile-pic">
+                                <img src="./images/profile1.png" alt="John Doe" class="profile-pic">
                                 <span>John Doe</span>
                             </div>
                         </td>
@@ -38,7 +38,7 @@
                         <td>2</td>
                         <td>
                             <div class="friend-info">
-                                <img src="profile2.png" alt="Jane Smith" class="profile-pic">
+                                <img src="./images/profile2.png" alt="Jane Smith" class="profile-pic">
                                 <span>Jane Smith</span>
                             </div>
                         </td>
@@ -49,7 +49,7 @@
                         <td>3</td>
                         <td>
                             <div class="friend-info">
-                                <img src="profile3.png" alt="Bob Johnson" class="profile-pic">
+                                <img src="./images/profile3.png" alt="Bob Johnson" class="profile-pic">
                                 <span>Bob Johnson</span>
                             </div>
                         </td>
@@ -60,7 +60,7 @@
                         <td>4</td>
                         <td>
                             <div class="friend-info">
-                                <img src="profile4.png" alt="Alice Brown" class="profile-pic">
+                                <img src="./images/profile4.png" alt="Alice Brown" class="profile-pic">
                                 <span>Alice Brown</span>
                             </div>
                         </td>
@@ -71,7 +71,7 @@
                         <td>5</td>
                         <td>
                             <div class="friend-info">
-                                <img src="profile5.png" alt="Charlie Davis" class="profile-pic">
+                                <img src="./images/profile5.png" alt="Charlie Davis" class="profile-pic">
                                 <span>Charlie Davis</span>
                             </div>
                         </td>
