--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <section class="movie-list">
             <div class="movie-item">
                 <div class="movie-poster">
-                    <img src="poster1.png" alt="Movie Poster">
+                    <img src="./images/poster1.png" alt="Movie Poster">
                 </div>
                 <div class="movie-info">
                     <h2>Y tu Mama Tambien</h2>
@@ -29,7 +29,7 @@
             </div>
             <div class="movie-item">
                 <div class="movie-poster">
-                    <img src="poster2.png" alt="Movie Poster">
+                    <img src="./images/poster2.png" alt="Movie Poster">
                 </div>
                 <div class="movie-info">
                     <h2>Inception</h2>
@@ -41,7 +41,7 @@
             </div>
             <div class="movie-item">
                 <div class="movie-poster">
-                    <img src="poster3.png" alt="Movie Poster">
+                    <img src="./images/poster3.png" alt="Movie Poster">
                 </div>
                 <div class="movie-info">
                     <h2>Harry Potter</h2>
@@ -53,7 +53,7 @@
             </div>
             <div class="movie-item">
                 <div class="movie-poster">
-                    <img src="poster4.png" alt="Movie Poster">
+                    <img src="./images/poster4.png" alt="Movie Poster">
                 </div>
                 <div class="movie-info">
                     <h2>Rocky</h2>
@@ -65,7 +65,7 @@
             </div>
             <div class="movie-item">
                 <div class="movie-poster">
-                    <img src="poster5.png" alt="Movie Poster">
+                    <img src="./images/poster5.png" alt="Movie Poster">
                 </div>
                 <div class="movie-info">
                     <h2>Lord of the Rings</h2>
