--- a/nearme.html
+++ b/nearme.html
@@ -159,7 +159,7 @@
         <section class="map-section">
             <h2>Nearby Movie Filming Locations</h2>
             <div class="map-container">
-                <img src="map-placeholder.png" alt="Map" class="map">
+                <img src="./images/map-placeholder.png" alt="Map" class="map">
             </div>
             <div class="location-list">
                 <div class="location-item">
@@ -168,7 +168,7 @@
                     <p>Distance: 2 km</p>
                     <p>Average Review: ⭐⭐⭐⭐☆</p>
                     <div class="friend-visited">
-                        <img src="profile1.png" alt="Friend 1" class="friend-pic">
+                        <img src="./images/profile1.png" alt="Friend 1" class="friend-pic">
                         <span>John Doe</span>
                     </div>
                     <button class="heart-button" onclick="toggleHeart(this)"></button>
@@ -179,7 +179,7 @@
                     <p>Distance: 5 km</p>
                     <p>Average Review: ⭐⭐⭐⭐☆</p>
                     <div class="friend-visited">
-                        <img src="profile1.png" alt="Friend 2" class="friend-pic">
+                        <img src="./images/profile1.png" alt="Friend 2" class="friend-pic">
                         <span>Jane Smith</span>
                     </div>
                     <button class="heart-button" onclick="toggleHeart(this)"></button>
@@ -190,7 +190,7 @@
                     <p>Distance: 8 km</p>
                     <p>Average Review: ⭐⭐⭐⭐☆</p>
                     <div class="friend-visited">
-                        <img src="profile3.png" alt="Friend 3" class="friend-pic">
+                        <img src="./images/profile3.png" alt="Friend 3" class="friend-pic">
                         <span>Bob Johnson</span>
                     </div>
                     <button class="heart-button" onclick="toggleHeart(this)"></button>
@@ -201,7 +201,7 @@
                     <p>Distance: 10 km</p>
                     <p>Average Review: ⭐⭐⭐⭐☆</p>
                     <div class="friend-visited">
-                        <img src="profile4.png" alt="Friend 4" class="friend-pic">
+                        <img src="./images/profile4.png" alt="Friend 4" class="friend-pic">
                         <span>Alice Brown</span>
                     </div>
                     <button class="heart-button" onclick="toggleHeart(this)"></button>
