--- a/profile.html
+++ b/profile.html
@@ -13,24 +13,24 @@
     <main>
         <section class="profile">
             <div class="profile-info">
-                <img src="profile2.png" alt="User Profile Picture" class="profile-pic">
+                <img src="./images/profile2.png" alt="User Profile Picture" class="profile-pic">
                 <h1>John Doe</h1>
                 <p>Top 4 Favourite Movies:</p>
                 <div class="favourite-movies">
                     <div class="movie-item">
-                        <img src="poster1.png" alt="Movie Title 1" class="movie-poster">
+                        <img src="./images/poster1.png" alt="Movie Title 1" class="movie-poster">
                         <span>Movie Title 1</span>
                     </div>
                     <div class="movie-item">
-                        <img src="poster2.png" alt="Movie Title 2" class="movie-poster">
+                        <img src="./images/poster2.png" alt="Movie Title 2" class="movie-poster">
                         <span>Movie Title 2</span>
                     </div>
                     <div class="movie-item">
-                        <img src="poster3.png" alt="Movie Title 3" class="movie-poster">
+                        <img src="./images/poster3.png" alt="Movie Title 3" class="movie-poster">
                         <span>Movie Title 3</span>
                     </div>
                     <div class="movie-item">
-                        <img src="poster4.png" alt="Movie Title 4" class="movie-poster">
+                        <img src="./images/poster4.png" alt="Movie Title 4" class="movie-poster">
                         <span>Movie Title 4</span>
                     </div>
                 </div>
@@ -42,7 +42,7 @@
             <div class="movie-list">
                 <div class="movie-item">
                     <div class="movie-poster">
-                        <img src="poster1.png" alt="Movie Poster">
+                        <img src="./images/poster1.png" alt="Movie Poster">
                     </div>
                     <div class="movie-info">
                         <h2>Movie Title 1</h2>
@@ -52,7 +52,7 @@
                 </div>
                 <div class="movie-item">
                     <div class="movie-poster">
-                        <img src="poster2.png" alt="Movie Poster">
+                        <img src="./images/poster2.png" alt="Movie Poster">
                     </div>
                     <div class="movie-info">
                         <h2>Movie Title 2</h2>
@@ -62,7 +62,7 @@
                 </div>
                 <div class="movie-item">
                     <div class="movie-poster">
-                        <img src="poster3.png" alt="Movie Poster">
+                        <img src="./images/poster3.png" alt="Movie Poster">
                     </div>
                     <div class="movie-info">
                         <h2>Movie Title 3</h2>
@@ -72,7 +72,7 @@
                 </div>
                 <div class="movie-item">
                     <div class="movie-poster">
-                        <img src="poster4.png" alt="Movie Poster">
+                        <img src="./images/poster4.png" alt="Movie Poster">
                     </div>
                     <div class="movie-info">
                         <h2>Movie Title 4</h2>
